PHOEBE Project ChangeLog:
----------------------------------------------------------------------------

2006-07-04: - Ethem Derman discovered a very nasty bug in parameter file
              readout that caused bad values to be read for spot parameters.
              Fixed. This is a very important fix, so a new release is in
              order: PHOEBE 0.29c is out!
            - Another bugfix... Mike Sallman reported a problem of plotting
              to png files with gnuplot; gnuplot specs have changed and I
              haven't noticed this before. This one is going to enter the
              0.29d once more important bugfixes show up.
2006-06-21: - PHOEBE 0.29b released!
              Hopefully this will be the last release of the old branch.
2006-06-20: - RV plotting window was missing "Lum:" entries in the info
              table. Because of that PHOEBE reported "Widget not found"
              issue when RV curves were plotted. Additionally, there was
              a stale printf () debugging statement that printed out the
              filter index to the terminal. All of these problems were
              fixed. Many thanks to Maja Vuckovic for pointing this out!
            - Function plot_rv_plot () has been cleaned a bit upon the
              bug report from Todd Vaccaro. I didn't manage to reproduce
              it here, but I hope that this fool-proofing will help.
2006-06-14: - Fool-proofing done in get_plot_limits_of_data () function.
2006-06-13: - Code beautification done in plot_lc_plot () while searching
              for the segfault problem that was reported. This will now be
              committed to see whether the problem is fixed; there was a
              double free () call that could have been triggered under
              special circumstances (chosen_filter variable not set).
2006-06-12: - File->New connected to the actual reset function. So far the
              menu item didn't do anything, now it calls the default para-